force-app/main/default/objects/InsurancePolicyProductClause/InsurancePolicyProductClause.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>