force-app/main/default/objects/InsurancePolicyProductClause/fields/BSN_ID__c.field-meta.xml
<CustomField>
    <fullName>BSN_ID__c</fullName>
    <label>BSN ID</label>
    <length>225</length>
    <type>Text</type>
</CustomField>