force-app/main/default/objects/InsurancePolicyProductClause/fields/Business_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Request_Number__c</fullName>
    <formula>InsurancePolicy.BUSREQ_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Request Number</label>
    <type>Text</type>
</CustomField>