force-app/main/default/objects/InsurancePolicyProductClause/fields/Clause_ID__c.field-meta.xml
<CustomField>
    <fullName>Clause_ID__c</fullName>
    <label>Clause ID</label>
    <length>225</length>
    <type>Text</type>
</CustomField>