force-app/main/default/objects/InsurancePolicyProductClause/fields/Clause_Name__c.field-meta.xml
<CustomField>
    <fullName>Clause_Name__c</fullName>
    <label>Clause Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>