force-app/main/default/objects/InsurancePolicyProductClause/fields/Lintaswata_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Lintaswata_Last_Update__c</fullName>
    <label>Lintaswata Last Update</label>
    <type>DateTime</type>
</CustomField>